--- a/workplus/src/main/resources/templates/member/denied.html
+++ b/workplus/src/main/resources/templates/member/denied.html
@@ -7,6 +7,6 @@
     <body>
         <h1>접근 불가 페이지입니다.</h1>
         <hr>
-        <a th:href="@{/}">홈으로 가기</a>
+        <a th:href="@{/main.do}">홈으로 가기</a>
     </body>
 </html>
