--- a/workplus/src/main/resources/templates/member/login.html
+++ b/workplus/src/main/resources/templates/member/login.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" 
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" 
+	  xmlns:sec="http://www.w3.org/1999/xhtml"
+	  xmlns="http://www.w3.org/1999/xhtml"
+	  layout:decorator="board/layout/basic"
+	  layout:decorate="~{layout/default_layout}">
+	  
     <head>
-        <meta charset="UTF-8">
-        <title>로그인 페이지</title>
-    </head>
+		<meta charset="UTF-8">
+		<title>로그인</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+		<script src="/webjars/bootstrap/3.3.4/dist/js/bootstrap.min.js"></script>
+		<th:block layout:fragment="head">
+			<!--/* css */-->
+			<link th:href="@{/css/common.css}" rel="stylesheet" />
+		</th:block>
+	</head>
     <body>
         <h1>로그인</h1>
+        <div th:if="${LoginFailMessage!=null}">
+	        <p th:text="${LoginFailMessage}" class="alert alert-danger"></p>
+	    </div>
         <hr>
-        <form th:action="@{/login}" method="post">
+        <form th:action="@{/workplus/login.do}" method="post">
+        	<input th:type="hidden" th:value="secret" name="secret_key">
             <input type="text" name="username" placeholder="account를 입력해주세요.">
             <input type="password" name="password" placeholder="password를 입력해주세요.">
             <button type="submit">로그인</button>
