--- a/workplus/src/main/resources/templates/member/user_info.html
+++ b/workplus/src/main/resources/templates/member/user_info.html
@@ -10,6 +10,6 @@
         <span sec:authentication="name"></span> 님 반갑습니다.
         <div sec:authentication="principal.authorities"></div>
 
-        <a th:href="@{/workplus/}">홈으로 가기</a>
+        <a th:href="@{/workplus/main.do}">홈으로 가기</a>
     </body>
 </html>
