로그인 기능 구현중 - Principal 통해 권한 있는 사람만 수정, 삭제 가능하게 구현 - 회원가입시 중복체크 구현해야 함.

--- a/workplus/src/main/resources/templates/fragments/header.html
+++ b/workplus/src/main/resources/templates/fragments/header.html
@@ -4,9 +4,9 @@
 
 	<div class="header">
 		<h2>일더하기 Work+</h2> 
-		<a sec:authorize="isAnonymous()" th:href="@{/workplus/notice/list.do}">공지사항</a>
-		<a sec:authorize="isAnonymous()" >FAQ</a>
-		<a sec:authorize="isAnonymous()" >상품목록</a>
+		<a th:href="@{/workplus/notice/list.do}">공지사항</a>
+		<a>FAQ</a>
+		<a>상품목록</a>
 		<a sec:authorize="isAnonymous()" th:href="@{/workplus/login.do}" style="float:right">로그인</a>
         <a sec:authorize="isAuthenticated()" th:href="@{/logout}" style="float:right">로그아웃</a>
         <a sec:authorize="isAnonymous()" th:href="@{/workplus/signup.do}" style="float:right">회원가입</a>
