--- a/workplus/src/main/resources/templates/member/login.html
+++ b/workplus/src/main/resources/templates/member/login.html
@@ -9,8 +9,8 @@
     <head>
 		<meta charset="UTF-8">
 		<title>로그인</title>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-		<script src="/webjars/bootstrap/3.3.4/dist/js/bootstrap.min.js"></script>
 		<th:block layout:fragment="head">
 			<!--/* css */-->
 			<link th:href="@{/css/common.css}" rel="stylesheet" />
