--- a/workplus/src/main/resources/templates/member/signup.html
+++ b/workplus/src/main/resources/templates/member/signup.html
@@ -11,24 +11,49 @@
 	    <meta name="_csrf" content="${_csrf.token}" />
         <title>회원가입 페이지</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script th:inline="javascript">
+	        $(document).ready(function(){
+				$("#submit").on("click", function(){
+					var idChkVal = $("#idChk").val();
+					var nickChkVal = $("#nickChk").val();
+					var p = document.getElementById('password').value;
+					var p_cf = document.getElementById('pw_cf').value;
+					var hphone = document.getElementById('hphone').value;
+					console.log(hphone);
+					if(idChkVal == "N" || nickChkVal == "N"){
+						alert("ID 및 닉네임 중복확인을 해주세요.");
+					}else if(p != p_cf){
+						alert("패스워드를 확인해주세요.");
+					}else if(hphone == ""){
+						alert("핸드폰 번호를 입력해주세요.");
+					}else if(idChkVal == "Y" && nickChkVal =="Y" && (p == p_cf) && (hphone != "")){
+						$("#regForm").submit();
+					}
+				});
+			})
+        
 	        function check_pw(){  //비밀번호 확인 
-	            var p = document.getElementById('pw').value; 
-	            var p_cf = document.getElementById('pw_cf').value; 
+	            var p = document.getElementById('password').value; 
+	            var p_cf = document.getElementById('pw_cf').value;
 	         
 	            if (p!=p_cf) { 
 	              document.getElementById('pw_check_msg').innerHTML = "비밀번호가 다릅니다. 다시 확인해 주세요."; 
 	            } 
 	            else { 
-	                document.getElementById('pw_check_msg').innerHTML = ""; 
+	              document.getElementById('pw_check_msg').innerHTML = ""; 
 	            } 
 	            if (p_cf=="") { 
 	              document.getElementById('pw_check_msg').innerHTML = ""; 
 	            } 
 	        }
 	        
-	        function fn_idChk(){       	
+	        function fn_idChk(){      
+	        	if($("#memberId").val()==""){
+					alert("아이디를 입력해주세요.");
+					$("#memberId").focus();
+					return false;
+				}
 	        	console.log($("#memberId").val());
 				$.ajax({
 					url : "/workplus/idChk.do",
@@ -36,7 +61,7 @@
 					dataType : "json",
 					data : {"memberId" : $("#memberId").val()},
 					success : function(data){
-						if(data == 1){
+						if(data >= 1){
 							alert("중복된 아이디입니다.");
 						}else if(data == 0){
 							$("#idChk").attr("value", "Y");
@@ -49,7 +74,12 @@
 				})
 			}
 	        
-	        function fn_nickChk(){       	
+	        function fn_nickChk(){
+	        	if($("#nickname").val()==""){
+					alert("닉네임을 입력해주세요.");
+					$("#nickname").focus();
+					return false;
+				}
 	        	console.log($("#nickname").val());
 				$.ajax({
 					url : "/workplus/nickChk.do",
@@ -57,7 +87,7 @@
 					dataType : "json",
 					data : {"nickname" : $("#nickname").val()},
 					success : function(data){
-						if(data == 1){
+						if(data >= 1){
 							alert("중복된 닉네임입니다.");
 						}else if(data == 0){
 							$("#nickChk").attr("value", "Y");
@@ -75,25 +105,25 @@
         <h1>회원 가입</h1>
         <hr>
 
-        <form th:action="@{/workplus/signup. do}" method="post" enctype="multipart/form-data"><br>
+        <form id="regForm" th:action="@{/workplus/signup.do}" method="post" enctype="multipart/form-data"><br>
         	아이디<br>
         	<!--PATTER으로 메일 유효성 검사 -->
             <input type="email" name="memberId" id="memberId" value="" size="20" placeholder="이메일 아이디 입력" pattern="[A-Za-z0-9_]+[A-Za-z0-9]*[@]{1}[A-Za-z0-9]+[A-Za-z0-9]*[.]{1}[A-Za-z]{1,3}" required> 예) id@domain.com 
             <button class="idChk" type="button" id="idChk" onclick="fn_idChk();" value="N">중복확인</button><br>
             닉네임<br>
             <input type="text" name="nickname" id="nickname" placeholder="nickname 입력">
-            <button class="nickChk" type="button" id="nickChk" onclick="fn_nickChk();" value="N">중복확인</button><br><br>
+            <button class="nickChk" type="button" id="nickChk" onclick="fn_nickChk();" value="N">중복확인</button><br>
             패스워드<br>
             <!--patter으로 비밀번호 유효성 검사 minlength와 maxlength로 글자 수 제한-->
-            <input type="password" name="password" placeholder="password입력" value="" minlength="4" maxlength="12" size="15" pattern="[a-zA-Z0-9]{4,12}" title="4~12자의 영문 대소문자와 숫자로만 입력."required/><br>
+            <input type="password" name="password" id="password" placeholder="password입력" value="" minlength="4" maxlength="12" size="15" pattern="[a-zA-Z0-9]{4,12}" title="4~12자의 영문 대소문자와 숫자로만 입력." required/><br>
             패스워드 확인<br>
             <input type="password" id="pw_cf" name="my_password_confirm" placeholder="password 재입력" onkeyup="check_pw()" value="" maxlength="12" size="15" required> 
             <span id="pw_check_msg"></span><br>
             핸드폰<br>
-            <input type="text" name="hphone" placeholder="hphone 입력"><br>
+            <input type="text" id="hphone" name="hphone" placeholder="hphone 입력"><br>
             프로필사진<br>
             <input type="file" name="file" placeholder="프로필사진 등록"><br>
-            <button type="submit">가입하기</button>
         </form>
+            <button id="submit" type="button">가입하기</button>
     </body>
 </html>
