--- a/workplus/src/main/resources/templates/noticeView.html
+++ b/workplus/src/main/resources/templates/noticeView.html
@@ -76,10 +76,9 @@
 		</table>
 		
 		<a th:href="@{/workplus/notice/list.do}">메인</a>
-		<div th:if="${noticeResponseDto.writer} == ${writer}">
-			<a th:href="@{/workplus/notice/delete.do(noticeSeq=${noticeResponseDto.seq})}">삭제</a>
-			<a th:href="@{/workplus/notice/write.do(noticeSeq=${noticeResponseDto.seq})}">수정</a>
-		</div>
+		<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/workplus/notice/delete.do(noticeSeq=${noticeResponseDto.seq})}">삭제</a>
+		<a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/workplus/notice/write.do(noticeSeq=${noticeResponseDto.seq})}">수정</a>
+
 		
 	</div>
 	
