마이페이지 구현중 - 파일등록시 확장자 추가하게끔 수정 중. - 이후 프로필 수정 탭부터 시작해야 함.

--- a/workplus/src/main/resources/templates/member/user_info.html
+++ b/workplus/src/main/resources/templates/member/user_info.html
@@ -49,7 +49,7 @@
 			<div class="myPage">
 			    <div class="left">
 			      왼쪽<br>
-			      <img src="/upload/cloud.png">
+			      <img src="/upload/profile01.jpg">
 			    </div>
 			    <div class="right">
 			      오른쪽
