--- a/workplus/src/main/resources/templates/mypage/profile_manage.html
+++ b/workplus/src/main/resources/templates/mypage/profile_manage.html
@@ -55,10 +55,48 @@
 			    <div class="left">
 			      왼쪽<br>
 			      <img th:src="'/upload/' + ${fileCours}"><br>
-				  <a th:href="@{/workplus/mypage/manageProfile.do}" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">프로필 관리</a>		  
+			      <div style="float:left;position:relative;left:15%">
+				 	 <a href="#" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">프로필 관리</a>
+				  </div>		  
 			    </div>
 			    <div class="right">
-			      오른쪽
+				    오른쪽<br>
+				    <div class="input-group mb-3">
+				    	<label for="staticEmail" class="col-sm-2 col-form-label">프로필 사진 변경</label>
+						<input type="file" class="form-control" id="inputGroupFile02">
+						<label class="input-group-text" for="inputGroupFile02">Upload</label>
+					</div>
+					<div class="mb-3 row">
+						<label for="staticEmail" class="col-sm-2 col-form-label">아이디</label>
+						<div class="col-sm-10">
+							<input type="text" readonly class="form-control-plaintext" id="staticEmail" th:value="${memberId}">
+						</div>
+					</div>	
+					<div class="mb-3 row">
+						<label for="staticNick" class="col-sm-2 col-form-label">닉네임</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="staticNick" value="닉네임테스트">
+						</div>
+					</div>
+					<div class="mb-3 row" style="line-height:3.3em">
+						<label for="inputPassword" class="col-sm-2 col-form-label">비밀번호</label>
+						<div class="col-sm-10">
+							<input type="password" class="form-control" id="inputPassword">
+							<button class="btn btn-outline-secondary" type="button" id="button-addon2">비밀번호 변경하기</button>
+						</div>
+					</div>
+					<div class="mb-3 row">
+						<label for="phone" class="col-sm-2 col-form-label">핸드폰번호</label>
+						<div class="col-sm-10">
+							<input type="text" class="form-control" id="phone" value="010-0000-0000">
+						</div>
+					</div>
+					<div style="float:right">
+						<a href="#" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">저장하기</a>
+						&nbsp;
+						<a href="#" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">탈퇴하기</a>
+						&nbsp;
+					</div>
 			    </div>
 		    </div>
 		</div>
