마이페이지 프로필 관리 구현중 - 프로필 업데이트 구현중. - 프로필 사진 및 비밀번호 변경 구현 필요.

--- a/workplus/src/main/resources/templates/member/user_info.html
+++ b/workplus/src/main/resources/templates/member/user_info.html
@@ -54,8 +54,10 @@
 			<div class="myPage">
 			    <div class="left">
 			      왼쪽<br>
-			      <img th:src="'/upload/' + ${fileCours}"><br>
-				  <a th:href="@{/workplus/mypage/manageProfile.do}" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">프로필 관리</a>		  
+			      <img th:src="'/upload/' + ${fileCours}" width="200" height="200"><br>
+			      <div style="float:left;position:relative;left:10%">
+				  	<a th:href="@{/workplus/member/manageProfile.do}" class="btn btn-primary active" role="button" data-bs-toggle="button" aria-pressed="true">프로필 관리</a>
+				  </div>		  
 			    </div>
 			    <div class="right">
 			      오른쪽
