--- a/workplus/src/main/resources/templates/mypage/profile_manage.html
+++ b/workplus/src/main/resources/templates/mypage/profile_manage.html
@@ -34,7 +34,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script th:inline="javascript">
+	    $(document).ready(function(){
+			$("#submit").on("click", function(){
+				var nickChkVal = $("#nickChk").val();
+				if(nickChkVal == "N"){
+					alert("닉네임 중복확인을 해주세요.");
+				}else if(nickChkVal =="Y"){
+					$("#frm").submit();
+				}
+			});
+		})
     
+	    function fn_nickChk(){
+	    	if($("#nickname").val()==""){
+				alert("닉네임을 입력해주세요.");
+				$("#nickname").focus();
+				return false;
+			}
+	    	console.log($("#nickname").val());
+			$.ajax({
+				url : "/workplus/nickChk.do",
+				type : "post",
+				dataType : "json",
+				data : {"nickname" : $("#nickname").val()},
+				success : function(data){
+					if(data >= 1){
+						alert("중복된 닉네임입니다.");
+					}else if(data == 0){
+						$("#nickChk").attr("value", "Y");
+						alert("사용가능한 닉네임입니다.");
+					}
+				},
+				error : function(XMLHttpRequest, textStatus, errorThrown){ // 비동기 통신이 실패할경우 error 콜백으로 들어옵니다.
+	                alert("통신 실패.")
+	            }
+			})
+		}
+	    
+	    function rowClick(id){
+	    	var popupX = (document.body.offsetWidth/2) - (700/2);
+	    	popupX += window.screenLeft; // 듀얼 모니터일 때
+	    	var popupY = (window.screen.height/2) - (400/2);
+	        window.open(
+	            "update_pw_pop_up.do",
+	            "update_pw_pop_up_frame",
+	            "width=700, height = 400, left="+ popupX + ", top="+ popupY
+	        );
+	    }
     </script>
     
     <body>
@@ -76,13 +122,13 @@
 					<div class="input-group mb-3">
 						<label for="phone" class="col-sm-2 col-form-label">닉네임</label>
 						<input type="text" class="form-control" th:value="${member.nickname}" name="nickname" id="nickname" aria-describedby="button-addon2">
-						<button class="btn btn-outline-secondary" type="button" id="button-addon2" style="padding:10px 40px">중복확인</button>
+						<button class="btn btn-outline-secondary" type="button" name="nickChk" style="padding:10px 40px" onclick="fn_nickChk();" value="N">중복확인</button>
 					</div>
 					
 					<div class="input-group mb-3">
 						<label for="phone" class="col-sm-2 col-form-label">비밀번호</label>
 						<input type="password" class="form-control" aria-describedby="button-addon2" name="password" id="password">
-						<button class="btn btn-outline-secondary" type="button" id="button-addon2" style="padding:10px 8px">비밀번호변경하기</button>
+						<button class="btn btn-outline-secondary" type="button" id="button-addon2" style="padding:10px 8px" th:onclick="rowClick()">비밀번호변경하기</button>
 					</div>
 					
 					<div class="input-group mb-3">
